src/test/deca/context/valid/assign_convfloat.deca
{
float i;
int j = 4;
i = 3 + 4;
i = 4 + 3.2f + j;
}
