src/test/deca/context/invalid/init_oparith_type.deca
{
int x = 3 + "a";
}
